quito la opción de pegar texto con caracteres de más del maxLength

--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/formulario-proyectos/formulario-proyectos.component.html
@@ -83,6 +83,7 @@
 									required
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									type="number"
 								/>
 							</mat-form-field>
@@ -329,6 +330,7 @@
 									readonly
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									[matTooltipPosition]="'above'"
 									matTooltip="Espacio diligenciado por el sistema"
 									matTooltipClass="info-tooltip"
@@ -395,6 +397,7 @@
 									readonly
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									[matTooltipPosition]="'above'"
 									matTooltip="Espacio diligenciado por el sistema"
 									matTooltipClass="info-tooltip"
@@ -515,6 +518,7 @@
 									maxlength="3"
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									min="1"
 									max="99"
 									required
@@ -603,6 +607,7 @@
 									min="1"
 									max="99"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									required
 									appOchoDecimales
 								/>
@@ -645,6 +650,7 @@
 									min="1"
 									max="99"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									required
 									appOchoDecimales
 									[matTooltipPosition]="'above'"
@@ -979,6 +985,7 @@
 									maxlength="2"
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									min="1"
 									max="99"
 									required
@@ -1205,6 +1212,7 @@
 										maxlength="28"
 										(keypress)="number($event)"
 										onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 										required
 										currencyMask
 										[options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
@@ -1249,6 +1257,7 @@
 										maxlength="28"
 										(keypress)="number($event)"
 										onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 										required
 										currencyMask
 										[options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
@@ -1293,6 +1302,7 @@
 										required
 										(keypress)="number($event)"
 										onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 										currencyMask
 										[options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
 										readonly
@@ -1358,6 +1368,7 @@
 									required
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									type="number"
 									[matTooltipPosition]="'above'"
 									matTooltip="Campo numérico"
@@ -1390,6 +1401,7 @@
 									(keypress)="number($event)"
 									onkeyup="if(this.value>31) this.value = 31;"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									[matTooltipPosition]="'above'"
 									matTooltip="Campo numérico igual o menor a 31 días"
 									matTooltipClass="info-tooltip"
@@ -1429,6 +1441,7 @@
 									max="99"
 									(keypress)="number($event)"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									required
 									type="number"
 									[matTooltipPosition]="'above'"
@@ -1462,6 +1475,7 @@
 									(keypress)="number($event)"
 									onkeyup="if(this.value>31) this.value = 31;"
 									onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 									[matTooltipPosition]="'above'"
 									matTooltip="Campo numérico igual o menor a 31 días"
 									matTooltipClass="info-tooltip"
@@ -1531,6 +1545,7 @@
 										required
 										(keypress)="number($event)"
 										onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
 										type="number"
 									/>
 								</mat-form-field>
