--- a/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/fase-preconstruccion/components/form-perfil/form-perfil.component.html
@@ -40,6 +40,7 @@
               #cantidadPerfiles
               required
               onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
             />
           </mat-form-field>
           <span
@@ -145,6 +146,7 @@
                       max="999"
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvRequeridas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRequeridas')"
@@ -205,6 +207,7 @@
                       max="999"
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvRecibidas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvRecibidas')"
@@ -264,6 +267,7 @@
                       max="999"
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                       formControlName="cantidadHvAprobadas"
                       required
                       (ngModelChange)="validateNumber($event, i, 'cantidadHvAprobadas')"
