--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-polizas-y-garantias/components/gestionar-polizas/gestionar-polizas.component.html
@@ -365,6 +365,7 @@
                     formControlName="valorAmparo"
                     (keypress)="validateNumberKeypress($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                   />
                 </mat-form-field>
