--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/registrar-acuerdo/registrar-acuerdo.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-acuerdo-cofinanciacion/components/registrar-acuerdo/registrar-acuerdo.component.html
@@ -93,6 +93,7 @@
                     maxlength="3"
                     (keypress)="validateNumberKeypress($event)"
                     onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     formControlName="numAportes"
                   />
                 </mat-form-field>
@@ -350,6 +351,7 @@
                             (keypress)="validateNumberKeypress($event)"
                             formControlName="cauntosDocumentos"
                             onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           />
                           <input formControlName="cofinanciacionId" type="hidden" />
                           <input formControlName="cofinanciacionAportanteId" type="hidden" />
@@ -509,6 +511,7 @@
                             [(ngModel)]="documento.valorDocumento"
                             maxLength="28"
                             onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                             [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                           />
                         </mat-form-field>
@@ -599,6 +602,7 @@
                             (keypress)="validateNumberKeypress($event)"
                             [(ngModel)]="documento.numeroActa"
                             onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           />
                         </mat-form-field>
                         <span
@@ -695,6 +699,7 @@
                             (keypress)="validateNumberKeypress($event)"
                             [(ngModel)]="documento.numeroAcuerdo"
                             onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           />
                         </mat-form-field>
                         <span
