--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/form-solicitar-contratacion/form-solicitar-contratacion.component.html
@@ -104,6 +104,7 @@
                       maxlength="8"
                       formControlName="llaveMEN"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
                   <span
