--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-gog/form-costo-variable-gog.component.html
@@ -153,6 +153,7 @@
                   formControlName="valorDescuento"
                   (keypress)="validateNumberKeypress($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }"
                 />
               </mat-form-field>
