--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-terc-gog/form-costo-variable-terc-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-costo-variable-terc-gog/form-costo-variable-terc-gog.component.html
@@ -79,6 +79,7 @@
                                             <input matInput #valorDescuento currencyMask maxlength="20" required
                                                 formControlName="valorDescuento" (keypress)="validateNumberKeypress($event)"
                                                 onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                                 [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                         </mat-form-field>
                                         <span class="contador" [matTooltipPosition]="'above'"
