--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-de-seleccion/components/proponentes-seleccionados-invitacion-cerrada/proponentes-seleccionados-invitacion-cerrada.component.html
@@ -35,6 +35,7 @@
                   maxlength="2"
                   (keypress)="validateNumberKeypress($event)"
                   onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                   required
                 />
               </mat-form-field>
