--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -36,6 +36,7 @@
                         <input matInput #valorAPagarDespues currencyMask maxlength="10" required formControlName="valorAPagarDespues"
                           (keypress)="validateNumberKeypress($event)"
                           onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                           [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                       </mat-form-field>
                     </div>
@@ -82,6 +83,7 @@
                                     <input matInput #valorDescuento currencyMask maxlength="20" required formControlName="valorDescuento"
                                       (keypress)="validateNumberKeypress($event)"
                                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                                       [options]="{ prefix: '$ ', thousands: '.', precision: '0', align: 'center' }">
                                   </mat-form-field>
                                   <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico"
