--- a/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/registro-hojas-vida-vrtc/registro-hojas-vida-vrtc.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/verificar-requisitos-construccion/components/registro-hojas-vida-vrtc/registro-hojas-vida-vrtc.component.html
@@ -23,6 +23,7 @@
           required
           (keypress)="validateNumberKeypress($event)"
           onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
         />
       </mat-form-field>
       <span class="contador" [matTooltipPosition]="'above'" matTooltip="Campo numérico" matTooltipClass="info-tooltip">
@@ -111,6 +112,7 @@
                       #cantidadHvRequeridas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
                   <span
@@ -151,6 +153,7 @@
                       #cantidadHvRecibidas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
                   <span
@@ -191,6 +194,7 @@
                       #cantidadHvAprobadas
                       (keypress)="validateNumberKeypress($event)"
                       onKeyPress="if(this.value.length>=this.maxLength) return false;"
+                  oninput="if (this.value.length > this.maxLength) this.value = this.value.slice(0, this.maxLength);"
                     />
                   </mat-form-field>
                   <span
